--- a/css/main.css
+++ b/css/main.css
@@ -1,4 +1,5 @@
-#left-eye, #right-eye {
+#left-eye,
+#right-eye {
   animation: slide 3s linear alternate infinite
 }
 
@@ -12,4 +13,15 @@
     transform: translateX(10px);
   }
 
+}
+
+#left-ear,
+#right-ear {
+  transform: translateY(0);
+  transition: all .5s linear;
+}
+
+#bear:hover #left-ear,
+#bear:hover #right-ear {
+  transform: translateY(-10px);
 }
